--- a/src/main.tex
+++ b/src/main.tex
@@ -238,7 +238,7 @@
 
   \profilesection{Teaching, Talks }
     \vspace{-1mm} % Adjust the negative space as needed
-		\skill{\faChalkboardTeacher}{HTML5 coach (India, Israel, US)}
+		\skill{\faChalkboardTeacher}{HTML5 coach (India, Israel, UK, US)}
     \skill{\faChalkboardTeacher}{Cross-cultural trainer, TMC}
 		\skill{\faChalkboardTeacher}{ WebRTC (Intl dev conference, Berlin)}
 
@@ -285,24 +285,21 @@
       {difuze inc} % Company
       {
         \vspace{0.1pt} % Added space before "Role"
+        \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
         \textbf{Role}: Similar to the mission at LVL Studio. Key projects include:\vspace{5pt}
 
-        \begin{itemize}[itemsep=-1mm, topsep=0pt, leftmargin=10pt]
-          \item \textbf{difuzego.com:} Upgraded to Angular 14. Implemented MFA authentication. Helped to migrate data from ElasticSearch to Postgre (Knex-compliant model). Built a file upload module with AWS Step Functions for compressed proxies. Expanded workflow with on-prem Node.js workers (Express) and SQLite. Worked on MPEG/DASH encoding (AWS Mediaconvert, later Hybrik), HLS (AWS EC2 MacOS, later FFMPEG), and AES-128 encryption. Tools: Postgres, SQL Server, Bitmovin, Accurate.\vspace{5pt}
-          \item \textbf{difuzevox.com:} Integrated Azure Text-to-Speech, FFMPEG, MediaInfo, and Auphonic APIs. Used TTML for voice generation and Video.js for multimedia. Managed Terraform infrastructure. Led a team of 3 developers and 1 QA. Focused on media accessibility.\vspace{5pt}
+        \begin{itemize}[itemsep=-1mm, topsep=0pt, leftmargin=8pt]
+          \item \textbf{difuzego.com:} Upgraded to Angular 14, implemented MFA authentication, and assisted in migrating ElasticSearch data to PostgreSQL (Knex-compliant models). Built a file upload module using AWS Step Functions for compressed proxies. Enhanced workflows with on-prem Node.js workers (Express) and SQLite. Worked on MPEG/DASH encoding (AWS Mediaconvert, later Hybrik), HLS (AWS EC2 MacOS, later FFMPEG), and AES-128 encryption. Tools: Postgres, SQL Server, Bitmovin, Accurate.\vspace{5pt}
+          \item \textbf{difuzevox.com:} Integrated Azure Text-to-Speech, FFMPEG, MediaInfo, and Auphonic APIs. Used TTML for voice generation and Video.js for multimedia. Managed Terraform infrastructure. Led a team of 3 developers and 1 QA.\vspace{5pt}
           \item \textbf{AI Detection Project:} Developed solutions for detecting mouth shapes ("pucker"), scene changes, and burnt-in text using 3rd-party AI tools. Managed multi-window/browser communication (postMessage).\vspace{5pt}
         \end{itemize}
 
-        \textbf{CI/CD:} Contributed to Kubernetes-based deployments on small on-prems projects.\vspace{5pt}
+        \textbf{CI/CD:} Contributed to Kubernetes-based deployments for on-prems projects.\vspace{5pt}
 
         \textbf{NPM Modules:} axios, knex, pg, qrcode, node-ec2-metadata, speakeasy, srt2vtt, mysql-json, hash-wasm, videojs-wavesurfer, ngx-virtual-scroller, http-proxy, chalk, bcrypt...
       }
       {Montreal} % Location on the second line, aligned to the right
 \end{cvtableNew}
-
-
-
-
 
 
 
@@ -317,7 +314,7 @@
 
         \vspace{0.1pt} % Add space before "Projects"
         \textbf{Projects:}
-        \begin{itemize}[itemsep=1mm, topsep=5pt, leftmargin=10pt]
+        \begin{itemize}[itemsep=1mm, topsep=5pt, leftmargin=8pt]
           \item \textbf{showcase.com}: Old legacy stack based on YII written in PHP, along with scripts in C\# for scheduling tasks like cron jobs
           \item \textbf{difuzego.com}: New stack based on \textit{modern} AWS features written in TS.
         \end{itemize}
@@ -325,9 +322,9 @@
         \vspace{4pt} % Add space before "Purpose"
         \textbf{Purpose}: Development based on a Media Asset Management system accessed through HTTPS requests using SOAP protocol, enabling content display in catalog form, with the ability to share films as screeners, as promotional links in email, preceding deliveries as orders.\vspace{5pt}
 
-        \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, also including various NPM modules like ngx-translate, bitmovin, fs-symlink, hammerjs, ngx-perfect-scrollbar, fortawesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, bowser, jsoneditor, lodash, jschardet...\vspace{5pt}
+        \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, also including various NPM modules like ngx-translate, bitmovin, fs-symlink, hammerjs, ngx-perfect-scrollbar, fortawesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, jsoneditor, lodash, jschardet...\vspace{5pt}
 
-        \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and NPM imports like exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk ...; async/await.\vspace{5pt}
+        \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and NPM imports like exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk ...; async/await.\vspace{5pt}
 
         \textbf{Package Management}: Proficient with WebPack, Node.js, and yarn.\vspace{5pt}
 
@@ -371,7 +368,7 @@
       \vspace{4pt}
       \textbf{Mobile and Process Agility:} Conducted detailed Android code reviews and operated within a three-week sprint cycle, actively participating in standups, demos, retros, and grooming. Managed tasks and backlogs through Jira, with documentation centralized in Confluence.\par
       \vspace{4pt}
-      \textbf{Virtualization:} Deployed each micro-service and software component in Docker containers, facilitating isolated, efficient deployment.\par
+      \textbf{Virtualization:} Deployed each µservice and software component as Docker containers\par
     }
     {Montreal} % Location on the second line, aligned to the right
 \end{cvtableNew}
@@ -478,11 +475,9 @@
     {Cisco} % Company
     {
       \vspace{1pt}
-      \textbf{Project}: HTML5 app for Belgacom on RDK middleware.\par
+      \textbf{Project}: HTML5 application for Belgacom on RDK middleware; delivered high-performance POC with HW acceleration (GPU).\par
       \vspace{4pt}
-      \textbf{Responsibilities}: GPU-accelerated app CSS3D, Three.JS as BackboneJS views; AJAX, websockets, tablets-friendly owing to Hammer.JS. Packaged via PhoneGap.\par
-      \vspace{4pt}
-      \textbf{Outcome}: Delivered high-performance POC with HW acceleration.\par
+      \textbf{Responsibilities}: app based on CSS3D and Three.JS part of BackboneJS views; with AJAX, WebSockets, Hammer.JS for tablet; packaged via PhoneGap.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 \end{cvtableNew}
@@ -533,15 +528,13 @@
 \begin{cvtableNew}
   \cvitemRightNew
     {Dec, 2010 – Jul, 2012} % Date
-    {WebKit / QT Developer (Full Stack)} % Job title
+    {WebKit / QT Developer} % Job title
     {NDS Technologies} % Company
     {
       \vspace{1pt}
-      \textbf{Project}: Full-stack QT / WebKit integration on specialized chipsets, focused on performance and compatibility.\par
+      \textbf{Project}: QT / WebKit integration on specialized chips, performance, compatibility.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Cross-compiled QT/WebKit for various chips, developed Java-QT bridges for \{QWebView, Android WebView\} control. Automated binary distribution via shell (IN, IL), packaged HTML5 content as .CRX archives for corporate app store.\par
-      \vspace{4pt}
-      \textbf{Skills}: X-Compiling, Java-QT Integration, Global Automation, Secure App Packaging.\par
+      \textbf{Responsibilities}: Cross-compiled QT/WebKit for various chipsets, developed Java-QT bridges for \{QWebView, Android WebView\}. Automated binary distribution via shell (IN, IL), packaged HTML5 content as .CRX archives for corporate app store.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
 \end{cvtableNew}
@@ -550,16 +543,22 @@
 \begin{cvtableNew}
   \cvitemRightNew
   {Feb, 2002 – Nov, 2010} % Date
-  {Web Engine Integration and Full-Stack Development} % Job title
+  {Web Engine Integration, HTML widgets coder} % Job title
   {Canal+} % Company
   {
+    \vspace{1pt}
     \textbf{Projects}:
-    - Integrated Opera 6 and NetFront web engines into Canal+ STBs, enabling advanced digital TV functionality.\par
+    - Integrated Opera 6 then NetFront web engines into Canal+ STBs, enabling advanced digital TV functionality. Cross-Department collaboration, worlwide. \par
+    \vspace{4pt}
     \textbf{Responsibilities}:
-    - Led NDS/ACCESS collaboration for STB middleware integration, managing full-stack development, cross-platform porting, and widget banks for STB-to-iPhone integration.\par
-    - Developed Java-Opera and Java-QT bridges for multimedia and custom plugins, enabling seamless integration and multimedia playback.\par
-    - Built frameworks for STB games, modernized HTML standards, and conducted performance optimization for multiple platforms.\par
-    \textbf{Skills}: Web Engine Integration (Opera, NetFront), Middleware Development, Cross-Platform Porting, Plugin Development, Multimedia/Game Integration, Project Management, C/C++ Programming, Cross-Department Collaboration.\par
+    Led NDS/ACCESS collaboration for STB middleware integration,
+    cross-platform porting, widgets bank creation for STB-to-iPhone, Facebook.
+    Developed Java-Opera and Java-QT bridges for custom plugins like Netscape, for seamless integration, multimedia playback.
+    Built frameworks for STB games, modernized HTML standards, conducted performance optimization for multiple platforms.
+
+    \par
+    \vspace{4pt}
+    \textbf{Skills}: Opera, NetFront integration. C/C++, Java. HTML, CSS, JS. HBBTV, CE-HTML\par
   }
     {Paris (FR)} % Location on the second line, aligned to the right
 \end{cvtableNew}
@@ -567,42 +566,35 @@
 
 
 
-\begin{cvtable}
-\cvitemRight{Feb,\\2002\\–\\Oct,\\2006}
-{Full-Stack Browser Integration}
-{Canal+, Paris (FR)}
-{
-  \textbf{Project}: Integrated Opera 6 browser into Canal+ Technologies' STB\\
-  \textbf{Responsibilities}:
-      Led Opera 6 integration with JavaScript 1.3, CSS 2, and Netscape plugins. Built Java-Opera bridges for multimedia and custom plugins. Managed STB games, setting modern HTML standards.\\
-  \textbf{Skills}: Web Engine Integration, Cross-Platform Porting, Client Customization, Multimedia/Game Integration, C++ programming, Plugin Development.\\
-}
-
-
-
-
-\cvitemRight{Sep,\\1999\\–\\Dec,\\2001}
-{Pay-TV System Integrator}
-{Canal+,  Paris (FR)}
-{
-  \textbf{Project}: System integration and testing for Canal+ in global operations.\\
-  \textbf{Responsibilities}:
-      Developed comprehensive test scripts and managed end-to-end multimedia platform integration.
-      Supported complex HW/SW setups providing extensive international client support, both remote and on-site.\\
-  \textbf{Skills}: Testing, Hardware/Software Integration, Client Support.\\
-}
-
-    \cvitemRight{Oct,\\1998\\–\\Aug,\\1999}
-    {DSP Engineer: AEC for Mobiles}
-    {ALTEN, Issy Les Moulineaux (FR)}
+\begin{cvtableNew}
+  \cvitemRightNew
+    {Sep, 1999 – Dec, 2001} % Date
+    {Pay-TV System Integrator} % Job title
+    {Canal+} % Company
     {
-      \textbf{Project}: Developed Acoustic Echo Cancellation (AEC) to enhance audio clarity in mobile devices and improve speakerphone performance.\\
-      \textbf{Responsibilities}:
-          Tuned AEC algorithms for echo suppression, noise reduction, and speech quality. Built a Visual C++ executable for hands-free call simulation and testing in varied environments.\\
-      \textbf{Skills}: Signal Processing, MATLAB, C/C++, Audio Tuning, Algorithm Optim.
+      \vspace{1pt}
+      \textbf{Project}: System integration and testing for Canal+ global multimedia platforms.\par
+      \vspace{4pt}
+      \textbf{Responsibilities}: Developed test scripts, managed end-to-end HW/SW integration, and provided on-site and remote support for international clients.\par
     }
+    {Paris (FR)} % Location on the second line, aligned to the right
+\end{cvtableNew}
 
-\end{cvtable}
+
+\begin{cvtableNew}
+  \cvitemRightNew
+    {Oct, 1998 – Aug, 1999} % Date
+    {DSP Engineer: AEC for Mobiles} % Job title
+    {ALTEN} % Company
+    {
+      \vspace{1pt}
+      \textbf{Project}: Developed Acoustic Echo Cancellation (AEC) to enhance audio clarity and speakerphone performance in mobile devices. MATLAB, C++\par
+      \vspace{4pt}
+      \textbf{Responsibilities}: Tuned AEC algorithms for echo suppression, noise reduction, and speech quality. Simulated and tested hands-free calls using a Visual C++ executable.\par
+    }
+    {Issy Les Moulineaux (FR)} % Location on the second line, aligned to the right
+\end{cvtableNew}
+
 
 
 
