--- a/src/main.tex
+++ b/src/main.tex
@@ -289,28 +289,29 @@
         \textbf{Role}: Similar to the mission at LVL Studio. Key projects include:\vspace{5pt}
 
         \begin{itemize}[itemsep=-1mm, topsep=0pt, leftmargin=8pt]
-          \item \textbf{difuzego.com:} Upgraded to Angular 14, implemented MFA authentication, and assisted in migrating ElasticSearch data to PostgreSQL (Knex-compliant models). Built a file upload module using AWS Step Functions for compressed proxies. Enhanced workflows with on-prem Node.js workers (Express) and SQLite. Worked on MPEG/DASH encoding (AWS Mediaconvert, later Hybrik), HLS (AWS EC2 MacOS, later FFMPEG), and AES-128 encryption. Tools: Postgres, SQL Server, Bitmovin, Accurate.\vspace{5pt}
+          \item \textbf{difuzego.com:} Upgraded to Angular 14, implemented MFA authentication, and assisted in migrating ElasticSearch data to PostgreSQL (Knex-compliant models). Built a file upload module using AWS Step Functions for compressed proxies. Enhanced workflows with on-prem Node.js workers (Express) and SQLite. Worked on MPEG/DASH encoding (AWS Mediaconvert, later Hybrik), HLS (AWS EC2 MacOS, later FFMPEG), and AES-128 encryption. Techs: Sqlite, PostGres, Bitmovin, VideoJs, Accurate Player, MPEG/DASH, HLS.\vspace{5pt}
           \item \textbf{difuzevox.com:} Integrated Azure Text-to-Speech, FFMPEG, MediaInfo, and Auphonic APIs. Used TTML for voice generation and Video.js for multimedia. Managed Terraform infrastructure. Led a team of 3 developers and 1 QA.\vspace{5pt}
           \item \textbf{AI Detection Project:} Developed solutions for detecting mouth shapes ("pucker"), scene changes, and burnt-in text using 3rd-party AI tools. Managed multi-window/browser communication (postMessage).\vspace{5pt}
         \end{itemize}
 
         \textbf{CI/CD:} Contributed to Kubernetes-based deployments for on-prems projects.\vspace{5pt}
 
-        \textbf{NPM Modules:} axios, knex, pg, qrcode, node-ec2-metadata, speakeasy, srt2vtt, mysql-json, hash-wasm, videojs-wavesurfer, ngx-virtual-scroller, http-proxy, chalk, bcrypt...
+        \textbf{NPM Modules:} axios, knex, pg, qrcode, node-ec2-metadata, speakeasy, srt2vtt, mysql-json, videojs-wavesurfer, ngx-virtual-scroller, http-proxy, chalk, bcrypt...
       }
       {Montreal} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
 
+  \vspace{1mm} % Add vertical space after this entry
 
-\begin{cvtableNew}
   \cvitemRightNew
     {Sep, 2017 – Jan, 2020} % Date
     {Full-Stack coder, Media Asset Management} % Job title
     {LVL Studio} % Company (without location here)
       {
         \vspace{0.1pt} % Add space before "Role"
-        \textbf{Role}: As a key contributor to Difuze’s new software stack, I was responsible for architectural decisions, module development, and component creation. I proactively managed the backlog using Jira, conducted code reviews via GitLab, and maintained detailed documentation in Confluence. In a B2B environment with Difuze Inc. as our primary client, my focus was on enhancing difuzego.com, our main product.\vspace{5pt}
+        \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
+        \textbf{Role}: As a key contributor to Difuze’s new software stack, I took part in architectural decisions,
+        module development, component creation. Proactively managed the backlog using Jira, conducted code reviews via GitLab, maintained detailed documentation in Confluence. In a B2B environment with Difuze Inc. as primary client, my focus was on elaborating difuzego.com as main product.\vspace{5pt}
 
         \vspace{0.1pt} % Add space before "Projects"
         \textbf{Projects:}
