--- a/src/main.tex
+++ b/src/main.tex
@@ -257,7 +257,7 @@
 	\profilesection{Short Bio}
   \vspace{-1mm} % Adjust the negative space as needed
 	\aboutme{
-    With 26+ years in web development, I led various projects across digital TV and media platforms, enhancing software stacks with agile practices and technologies like AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI
+    With more than 20 years in web development, I led various projects across digital TV and media platforms, enhancing software stacks with agile practices and technologies like AWS, Angular, Vue.js, React, PHP, Python, HTML5, and AI
     }\\
 
 }
@@ -361,7 +361,8 @@
     {AlayaCare} % Company
     {
       \vspace{0.1pt} % Add space before "Role"
-      \textbf{Role}: Developed web functionalities for healthcare platforms, focusing on both front-end and back-end.\par
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
+      \textbf{Role}: Developed web functionalities for healthcare platforms, full-stack.\par
       \vspace{4pt}
       \textbf{Front-end:} Created VUE.js components without jQuery, using libraries such as super-agent for AJAX requests, moment.js for date formatting, simple-vue-validator for validation, and LESS for optimized CSS. Creation of a new time-entry component tailored on jquery.timeentry plugin (out of VUE.js).\par
       \vspace{4pt}
@@ -369,31 +370,26 @@
       \vspace{4pt}
       \textbf{Mobile and Process Agility:} Conducted detailed Android code reviews and operated within a three-week sprint cycle, actively participating in standups, demos, retros, and grooming. Managed tasks and backlogs through Jira, with documentation centralized in Confluence.\par
       \vspace{4pt}
-      \textbf{Virtualization:} Deployed each µservice and software component as Docker containers\par
+      \textbf{Virtualization:} Deployed µservices and software component as Dockerized\par
     }
     {Montreal} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+\vspace{2.2mm} % Add vertical space after this entry
 
-
-
-
-
-
-\begin{cvtableNew}
   \cvitemRightNew
     {May, 2015 – Dec, 2016} % Date
     {Front-End Developer in the Digital TV Sector} % Job title
     {Abbeal for Canal+} % Company
     {
       \vspace{-0.4pt} % Add space before "Role"
-      \textbf{Role}: Developed and maintained WebApp interfaces for Canal+ digital TV receivers, reaching millions on TNT, SATELLITE, and IPTV.\par
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
+      \textbf{Role}: Developed and maintained WebApp interfaces and back-end for Canal+ digital TV receivers, reaching millions on TNT, SATELLITE, and IPTV.\par
       \vspace{4pt}
-      \textbf{Front-End:} Engineered HTML, JS, CSS solutions, managed by Webpack, executed by Qt/WebKit on Linux. Used ES2015 standards via Babel, builds managed by grunt\par
+      \textbf{Front-End:} Engineered HTML, JS, CSS solutions, managed by Webpack, executed by Qt/WebKit on Linux. Used ES2015 standards with Babel, grunt\par
       \vspace{4pt}
       \textbf{Server-Side:} Supported by a Python UWSGI server hosting the WebApp and managing routing through DBUS for system interactions.\par
       \vspace{4pt}
-      \textbf{Libraries and Frameworks:} Transitioned from BACKBONE to ANGULAR for enhanced MVC architecture efficiency; utilized LODASH for advanced data manipulation, EASELJS for robust interactive canvas operations, and EJS for efficient templating solutions.\par
+      \textbf{Libraries and Frameworks:} Transitioned from BACKBONE to ANGULAR for enhanced MVC architecture; used LODASH for advanced data manipulation, EASELJS for interactive canvas operations, and EJS for templating.\par
       \vspace{4pt}
       \textbf{Agile and Testing:} Conducted MOCHA, SPY, and SINON unit tests and POSTMAN API testing. Managed agile sprints, tracked tasks on Jira, documented in Confluence.\par
       \vspace{4pt}
@@ -403,20 +399,17 @@
       \vspace{4pt} % Ensures there is space after the last section before any text that might follow or end of the section.
     }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
 
+    \vspace{1.2mm} % Add vertical space after this entry
 
-
-
-
-\begin{cvtableNew}
   \cvitemRightNew
     {Dec, 2014 – Apr, 2015} % Date
     {Android + NodeJS Developer for IoT} % Job title
     {Cisco} % Company
     {
       \vspace{1pt} % Add space before "Project"
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Project}: Integrated IoT with advanced TV for home automation.\par
       \vspace{4pt}
       \textbf{Technologies}: IoT using openHAB, Bluetooth (iBeacons), WiFi (Cisco MSE/Prime), RFID (Impinj). Enhanced TV channel personalization, ad targeting w/ Cisco analytics. Developed apps for wearables and Samsung mobiles, webSockets, Node.js servers.\par
@@ -427,23 +420,17 @@
       \vspace{4pt} % Ensures there is space after the last section before any text that might follow or end of the section.
     }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+    \vspace{1.2mm} % Add vertical space after this entry
 
-
-
-
-
-
-
-
-\begin{cvtableNew}
-  \cvitemRightNew
+    \cvitemRightNew
     {Aug, 2014 – Dec, 2014} % Date
     {HTML5/JS Front-End Developer} % Job title
     {Cisco} % Company
     {
       \vspace{1pt} % Add space before "Project"
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
+      \textbf{Project}: Integrated IoT with advanced TV for home automa
       \textbf{Project}: Proof of concept WebApp for ZON TV Portugal.\par
       \vspace{4pt}
       \textbf{Technologies}: Vanilla JS, CSS3, HTML5 video player in custom UI manager to structure MVC views. Built core components such as the channel list, channel banner, EPG grid.\par
@@ -476,80 +463,73 @@
     {Cisco} % Company
     {
       \vspace{1pt}
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Project}: HTML5 application for Belgacom on RDK middleware; delivered high-performance POC with HW acceleration (GPU).\par
       \vspace{4pt}
       \textbf{Responsibilities}: app based on CSS3D and Three.JS part of BackboneJS views; with AJAX, WebSockets, Hammer.JS for tablet; packaged via PhoneGap.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+  \vspace{1.2mm} % Add vertical space after this entry
 
-
-
-
-
-\begin{cvtableNew}
   \cvitemRightNew
     {Mar, 2013 – Jan, 2014} % Date
     {CSS3D + HTML5/JS Front-End Developer} % Job title
     {NDS Technologies} % Company
     {
       \vspace{1pt}
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Project}: HTML5 development for smart TVs, HDMI stick, Raspberry Pi, tablets.\par
       \vspace{4pt}
       \textbf{Responsibilities}: Built features with HTML, CSS3D, WebGL, BackboneJS, and ThreeJS for 3D modeling. Optimized hardware performance for QT5/WebKit, WebKitNix, and Chromium. Managed cross-compilation for LG TVs, Raspberry Pi, and MacOS.\par
       \vspace{4pt}
-      \textbf{Outcome}: Delivered high-performance solutions, attracting Belgacom and Zon TV.\par
+      \textbf{Outcome}: Delivered high-performance solutions attracting Belgacom \& Zon TV.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+  \vspace{1.48mm} % Add vertical space after this entry
 
-
-
-
-\begin{cvtableNew}
   \cvitemRightNew
     {Aug, 2012 – Feb, 2013} % Date
     {AngularJS | BackboneJS Front-End Developer} % Job title
     {Cisco (ex NDS)} % Company
     {
       \vspace{1pt}
-      \textbf{Project}: HTML5 solution for digital TV with patented remote UI, 2nd-screen features.\par
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
+      \textbf{Project}: HTML5 solution for digital TV with patented remote UI, 2nd-screen.\par
       \vspace{4pt}
       \textbf{Responsibilities}: Developed on a patented HTML5 rendering solution for payTV, showcased @IBC. Evaluated frameworks: Angular, Backbone, Spine, for STB HTML5 EPG. Built MVC architecture for STB apps, assessed Flash-to-Html5 (e.g Adobe Edge).\par
       \vspace{4pt}
       \textbf{Skills}: HTML5 Development, Frameworks evaluation, MVC Architecture, Open-Source tools (GIT, Jira, Jenkins, Confluence, Adobe Edge).\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+  \vspace{1.48mm} % Add vertical space after this entry
 
-
-\begin{cvtableNew}
   \cvitemRightNew
     {Dec, 2010 – Jul, 2012} % Date
     {WebKit / QT Developer} % Job title
     {NDS Technologies} % Company
     {
       \vspace{1pt}
-      \textbf{Project}: QT / WebKit integration on specialized chips, performance, compatibility.\par
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
+      \textbf{Project}: QT/WebKit integration on specialized chips, performance, compliance.\par
       \vspace{4pt}
-      \textbf{Responsibilities}: Cross-compiled QT/WebKit for various chipsets, developed Java-QT bridges for \{QWebView, Android WebView\}. Automated binary distribution via shell (IN, IL), packaged HTML5 content as .CRX archives for corporate app store.\par
+      \textbf{Responsibilities}: Cross-compiled QT/WebKit for various chipsets, developed Java-QT bridges for {QWebView, Android WebView}. Automated binary distribution via shell (IN, IL), packaged HTML5 as .CRX for corporate app store.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+  \vspace{1.48mm} % Add vertical space after this entry
 
-\begin{cvtableNew}
   \cvitemRightNew
   {Feb, 2002 – Nov, 2010} % Date
   {Web Engine Integration, HTML widgets coder} % Job title
   {Canal+} % Company
   {
     \vspace{1pt}
+    \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
     \textbf{Projects}:
-    - Integrated Opera 6 then NetFront web engines into Canal+ STBs, enabling advanced digital TV functionality. Cross-Department collaboration, worlwide. \par
+    - Integrated Opera 6 then NetFront web engines into STBs, enabling advanced digital TV functionality. Cross-Department collaboration, worlwide. \par
     \vspace{4pt}
     \textbf{Responsibilities}:
     Led NDS/ACCESS collaboration for STB middleware integration,
@@ -559,36 +539,34 @@
 
     \par
     \vspace{4pt}
-    \textbf{Skills}: Opera, NetFront integration. C/C++, Java. HTML, CSS, JS. HBBTV, CE-HTML\par
+    \textbf{Skills}: browser integration. C/C++, Java. HTML, CSS, JS. HBBTV, CE-HTML\par
   }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+    \vspace{1.48mm} % Add vertical space after this entry
 
-
-
-\begin{cvtableNew}
   \cvitemRightNew
     {Sep, 1999 – Dec, 2001} % Date
     {Pay-TV System Integrator} % Job title
     {Canal+} % Company
     {
       \vspace{1pt}
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Project}: System integration and testing for Canal+ global multimedia platforms.\par
       \vspace{4pt}
       \textbf{Responsibilities}: Developed test scripts, managed end-to-end HW/SW integration, and provided on-site and remote support for international clients.\par
     }
     {Paris (FR)} % Location on the second line, aligned to the right
-\end{cvtableNew}
 
+    \vspace{1.48mm} % Add vertical space after this entry
 
-\begin{cvtableNew}
-  \cvitemRightNew
+    \cvitemRightNew
     {Oct, 1998 – Aug, 1999} % Date
     {DSP Engineer: AEC for Mobiles} % Job title
     {ALTEN} % Company
     {
       \vspace{1pt}
+      \fontsize{10.8pt}{12pt}\selectfont % Subtle font increase
       \textbf{Project}: Developed Acoustic Echo Cancellation (AEC) to enhance audio clarity and speakerphone performance in mobile devices. MATLAB, C++\par
       \vspace{4pt}
       \textbf{Responsibilities}: Tuned AEC algorithms for echo suppression, noise reduction, and speech quality. Simulated and tested hands-free calls using a Visual C++ executable.\par
